# GoalChain

./: LICENSE  README.md  product_order_flow  pyproject.toml
examples/: product_order.py  product_order_flow
src/goalchain/: __init__.py  goalchain.py
